dockerfile and yaml files created for auth microservice, auth pushed to my dockerhub

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ python/src/auth/venv/
 kubectl
 minikube-linux-amd64
 
+
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
